@@ -43,7 +43,7 @@ Copyright: 2009 Catalin Patulea <cronos586@gmail.com>
 Copyright: 2009 JJ Kunce (http://code.google.com/u/jjkunce)
 Copyright: 2008 Alexei Sokolov
 Copyright: 2009 Carl Roach <carl.roach@gmail.com>
-Copyright: 2009 Sujan Shakya
+Copyright: 2009 Sujan Shakya <suzan.shakya@gmail.com>
 Copyright: 2009 Klavdij Voncina <voncina.klavdij@siol.net>
 Copyright: 2009 Scott Koranda <skoranda@gmail.com>
 Copyright: 2009 Rich Newpol (http://code.google.com/u/rich.newpol/)
